# ChangeLog for net-zope/zwiki
# Copyright 2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zwiki/Attic/ChangeLog,v 1.3 2003/04/04 07:09:03 kutsuya Exp $

*zwiki-0.16.0 (08 Mar 2003)

  03 Apr 2003; Jason Shoemaker <kutsuya@gentoo.org> zwiki-0.16.0.ebuild:
  ~x86 -> x86 and added ~ppc

  08 Mar 2003; Jason Shoemaker <kutsuya@gentoo.org> zwiki-0.16.0.ebuild:
  Version bump.

*zwiki-0.15.0 (03 Mar 2003)

  03 Mar 2003; Jason Shoemaker <kutsuya@gentoo.org> : Moving from net-www to 
  net-zope

*zwiki-0.15 (16 Feb 2003)

  16 Feb 2003; Jason Shoemaker <kutsuya@gentoo.org> : Initial import.