@@ -1,2 +1,2 @@
-MD5 bb71ebc9ce8a861ba730ed4b233670bd /zwiki-0.17.0.ebuild 348
+MD5 3afa68a6b61bc423770c406c9d3be9b9 /zwiki-0.17.0.ebuild 446
 MD5 f600e28494e2c5c6c6e730f00c056af9 ZWiki-0.17.0.tgz 181470
