@@ -1,6 +1,11 @@
 # ChangeLog for net-zope/zwiki
 # Copyright 2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zwiki/Attic/ChangeLog,v 1.3 2003/04/04 07:09:03 kutsuya Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zwiki/Attic/ChangeLog,v 1.4 2003/04/05 19:47:28 kutsuya Exp $
+
+*zwiki-0.17.0 (05 Apr 2003)
+
+  05 Apr 2003; Jason Shoemaker <kutsuya@gentoo.org> zwiki-0.17.0.ebuild:
+  Version bumped.
 
 *zwiki-0.16.0 (08 Mar 2003)
 
